update requirements and add chat window

--- a/chatbotapp/templates/chatbotapp/index.html
+++ b/chatbotapp/templates/chatbotapp/index.html
@@ -168,6 +168,16 @@
     <div id="opener" class="chatbot">
       <img src="{% static 'chatbotapp/images/question.svg' %}" style="margin:10px">
     </div>
+    <div class="chatbot_window">
+      <div class="chatbot_header">
+        <p>Chatbot ECL</p>
+      </div>
+      <div class="chatbot_body">
+      </div>
+      <div class="chatbot_input">
+        <input type="text" id="chatbot_input">
+      </div>
+    </div>
 </head>
 <body>
  
