--- a/chatbotapp/static/chatbotapp/css/style.css
+++ b/chatbotapp/static/chatbotapp/css/style.css
@@ -1268,3 +1268,67 @@ h1, h2, h3, h4 {
     border: 2px solid white;
     z-index: 10000;
 }
+
+.chatbot_window
+{
+    width: 35%;
+    height: 70%;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    box-shadow: 0 10px 15px rgba(0,0,0,.6);
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border: 2px solid white;
+    overflow: hidden;
+    z-index: 10100;
+}
+
+.chatbot_header
+{
+    height: 20%;
+    background: blue;
+}
+
+.chatbot_header p
+{
+    height: 100%;
+    width: 100%;
+    font-size: 1.5em;
+    margin-left: 0.5em;
+    padding-top: 0.5em;
+    color: white;
+}
+
+.chatbot_body
+{
+    background: rgb(234, 238, 243);
+    height: 70%;
+    width: 100%;
+    border-bottom: solid 1px rgba(0,0,0,.6);
+    overflow-y: scroll;
+
+}
+
+.chatbot_input
+{
+    background: white;
+    margin: 0;
+    width: 100%;
+    height: 10%;
+    bottom: 0;
+    left: 0;
+}
+
+.chatbot_input input
+{
+    background: white;
+    width: 100%;
+    height: 100%;
+    padding-top: 5px;
+    padding-left: 20px;
+    border-width: 0px;
+    bottom: 0;
+    left: 0;
+}
